--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "migrate-data:force": "cross-env FORCE_OVERWRITE=true node scripts/migrate-data.js"
   },
   "dependencies": {
+    "chart.js": "^4.4.8",
     "cloudinary": "^2.6.0",
     "mongodb": "^6.14.2",
     "mongoose": "^8.12.1",
     "next-cloudinary": "^6.16.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-datepicker": "^8.2.1",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.1"
   },
@@ -23,6 +26,7 @@
     "@tailwindcss/postcss": "^4.0.14",
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
+    "@types/react-datepicker": "^6.2.0",
     "autoprefixer": "^10.4.21",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
