--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "autoprefixer": "^10.4.21",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
+    "eslint": "^9.23.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.14",
     "typescript": "5.8.2"
