--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "recharts": "^2.15.1"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^15.2.4",
     "@tailwindcss/postcss": "^4.0.14",
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
