--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@next/eslint-plugin-next": "^15.2.4",
     "@tailwindcss/postcss": "^4.0.14",
+    "@types/next": "^8.0.7",
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
     "@types/react-datepicker": "^6.2.0",
