--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,6 @@
 {
-  "version": 2,
-  "routes": [
-    { "handle": "filesystem" },
-    { "src": "/(.*)", "dest": "/index.html" }
+  "rewrites": [
+    { "source": "/((?!api|_next/static|_next/image).*)", "destination": "/index.html" }
   ],
   "cleanUrls": true,
   "trailingSlash": false
