fix: add anti-caching measures and forced redirects

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
+  "version": 2,
+  "builds": [
+    {
+      "src": "next.config.js",
+      "use": "@vercel/next"
+    }
   ],
   "cleanUrls": true,
   "trailingSlash": false
